--- a/samples/analytics/client_secrets.json.sample
+++ b/samples/analytics/client_secrets.json.sample
@@ -1,7 +1,7 @@
 {
   "installed": {
-    "client_id": "[[INSERT CLIENT ID HERE]]",
-    "client_secret": "[[INSERT CLIENT SECRET HERE]]",
+    "client_id": "CLIENTID",
+    "client_secret": "SECRET",
     "redirect_uris": [],
     "auth_uri": "https://accounts.google.com/o/oauth2/auth",
     "token_uri": "https://accounts.google.com/o/oauth2/token"
